--- a/notebooks/training-demo.ipynb
+++ b/notebooks/training-demo.ipynb
@@ -9,7 +9,7 @@
    },
    "outputs": [],
    "source": [
-    "!pip install scikit-learn numpy mlflow skl2onnx onnxruntime apolo-sdk"
+    "!pip install scikit-learn numpy mlflow skl2onnx onnxruntime apolo-sdk apolo-extras"
    ]
   },
   {
@@ -155,12 +155,71 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "218bd42c",
+   "metadata": {},
+   "source": [
+    "## Starting an Inference Server\n",
+    "\n",
+    "Go to Apolo Console, start a Apolo Deploy application, select your model from the list and start an inference server."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b31c1049",
+   "metadata": {},
+   "source": [
+    "## Testing the Inference Server"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12c8465a-425d-4c50-a3d8-2ce16985e658",
+   "id": "8cc8333c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import requests\n",
+    "import json\n",
+    "\n",
+    "# Get the Triton server URL from the Apolo SDK\n",
+    "async with apolo_sdk.get() as client:\n",
+    "    apolo_token = await client.config.token()\n",
+    "    async with client.jobs.list(name=[\"triton\"], statuses=[apolo_sdk.JobStatus.RUNNING]) as job_iter:\n",
+    "        jobs = [job async for job in job_iter]\n",
+    "        server_url = jobs[0].http_url\n",
+    "\n",
+    "# Define the endpoint URL\n",
+    "url = f\"{server_url}/v2/models/onnx-iris-perceptron-production/versions/1/infer\"\n",
+    "\n",
+    "# Create the payload with normalized input values\n",
+    "payload = {\n",
+    "    \"id\": \"test_request\",\n",
+    "    \"inputs\": [\n",
+    "        {\n",
+    "            \"name\": \"X\",\n",
+    "            \"shape\": [1, 4],\n",
+    "            \"datatype\": \"FP32\",\n",
+    "            \"data\": [0.22, 0.63, 0.07, 0.04]\n",
+    "        }\n",
+    "    ]\n",
+    "}\n",
+    "\n",
+    "# Set the headers\n",
+    "headers = {\n",
+    "    \"Content-Type\": \"application/json\",\n",
+    "    \"Authorization\": f\"Bearer {apolo_token}\"\n",
+    "}\n",
+    "\n",
+    "# Make the POST request\n",
+    "response = requests.post(url, headers=headers, data=json.dumps(payload))\n",
+    "\n",
+    "# Print the response\n",
+    "print(\"Status Code:\", response.status_code)\n",
+    "print(\"Response:\")\n",
+    "print(response.text)\n",
+    "print(json.dumps(response.json(), indent=2))"
+   ]
   }
  ],
  "metadata": {
