Add markdown sections for preparations and dependency installation in training demo notebook

--- a/notebooks/training-demo.ipynb
+++ b/notebooks/training-demo.ipynb
@@ -1,6 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "7f231f8d",
+   "metadata": {},
+   "source": [
+    "## Preparations\n",
+    "\n",
+    "Make you you have started a MLFlow application from Apolo Console."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d13f719",
+   "metadata": {},
+   "source": [
+    "## Installing Dependencies"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "fda2ec6b-0131-4852-88d6-4aab698b1641",
@@ -42,6 +60,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e224362c",
+   "metadata": {},
+   "source": [
+    "This function uses Apolo SDK to get the current MLFlow instance URL"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "19b23dc6-81fd-4eea-8510-d9fa352f193d",
@@ -72,6 +98,14 @@
     "tracking_uri = os.environ.get(\"MLFLOW_TRACKING_URI\", await get_mlflow_url())\n",
     "mlflow.set_tracking_uri(tracking_uri)\n",
     "print(tracking_uri)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "463f62be",
+   "metadata": {},
+   "source": [
+    "Start training and logging the model, its parameters and metrics."
    ]
   },
   {
